<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/small_element_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:padding="@dimen/small_element_padding"
            android:text="@string/dark_mode"
            android:textSize="@dimen/xl_large_text"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_emoji"
            android:textSize="@dimen/xl_large_text" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/dark_mode_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/small_element_padding">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_on"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/large_element_padding"
            android:text="@string/on"
            android:textSize="@dimen/medium_text" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_off"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/large_element_padding"
            android:text="@string/off"
            android:textSize="@dimen/medium_text" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_system"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/large_element_padding"
            android:text="@string/system_default"
            android:textSize="@dimen/medium_text" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="@dimen/small_element_padding"
        android:visibility="gone">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/small_element_padding"
            android:letterSpacing="0"
            android:padding="@dimen/xs_small_element_padding"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/xs_medium_text"
            android:textStyle="bold"
            app:cornerRadius="@dimen/small_element_padding" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/small_element_padding"
            android:backgroundTint="@color/colorAccent"
            android:letterSpacing="0"
            android:padding="@dimen/xs_small_element_padding"
            android:text="@string/set"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/xs_medium_text"
            android:textStyle="bold"
            app:cornerRadius="@dimen/small_element_padding" />

    </LinearLayout>
</LinearLayout>