<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/small_element_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:padding="@dimen/small_element_padding"
                android:text="@string/sound_effect"
                android:textSize="@dimen/xl_large_text"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speaker_emoji"
                android:textSize="@dimen/xl_large_text" />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_element_padding"
            android:alpha="0.7"
            android:paddingHorizontal="@dimen/small_element_padding"
            android:text="@string/sound_effect_subtitle"
            android:textSize="@dimen/xl_medium_text" />

        <RadioGroup
            android:id="@+id/sound_effect_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/small_element_padding">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_long_whistle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/large_element_padding"
                android:text="@string/long_whistle"
                android:textSize="@dimen/medium_text" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_short_whistle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/large_element_padding"
                android:text="@string/short_whistle"
                android:textSize="@dimen/medium_text" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="@dimen/small_element_padding">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dismiss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/small_element_padding"
                android:letterSpacing="0"
                android:padding="@dimen/xs_small_element_padding"
                android:text="@string/dismiss"
                android:textAllCaps="false"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/xs_medium_text"
                android:textStyle="bold"
                app:cornerRadius="@dimen/small_element_padding" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/small_element_padding"
                android:backgroundTint="@color/colorAccent"
                android:letterSpacing="0"
                android:padding="@dimen/xs_small_element_padding"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/xs_medium_text"
                android:textStyle="bold"
                app:cornerRadius="@dimen/small_element_padding" />
        </LinearLayout>
    </LinearLayout>
</layout>