<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/large_element_padding"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/xs_large_element_padding"
            android:src="@drawable/ic_close_grey" />

        <LinearLayout
            android:id="@+id/countdown_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/current_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/medium_element_padding"
                android:layout_marginVertical="@dimen/medium_element_padding"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/lets_go"
                android:textAllCaps="true"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/xxl_huge_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/current_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="@dimen/medium_element_padding"
                android:textAllCaps="true"
                android:textSize="@dimen/xl_medium_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/countdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/nunito"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="@dimen/enormous_text" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="100dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/init_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/xs_medium_element_padding"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/start_button"
                android:layout_width="125dp"
                android:layout_height="60dp"
                android:layout_margin="@dimen/medium_element_padding"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/start"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/xl_medium_text"
                app:cornerRadius="13dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/run_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/xs_medium_element_padding"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pause_button"
                android:layout_width="125dp"
                android:layout_height="60dp"
                android:layout_margin="@dimen/medium_element_padding"
                android:backgroundTint="@color/white"
                android:letterSpacing="0"
                android:text="@string/pause"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/xl_medium_text"
                app:cornerRadius="13dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pause_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/xs_medium_element_padding"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/resume_button"
                android:layout_width="125dp"
                android:layout_height="60dp"
                android:layout_margin="@dimen/medium_element_padding"
                android:backgroundTint="@color/resume_green"
                android:letterSpacing="0"
                android:text="@string/resume"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/xl_medium_text"
                app:cornerRadius="13dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/stop_button"
                android:layout_width="125dp"
                android:layout_height="60dp"
                android:layout_margin="@dimen/medium_element_padding"
                android:backgroundTint="@color/stop_red"
                android:letterSpacing="0"
                android:text="@string/stop"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/xl_medium_text"
                app:cornerRadius="13dp" />

        </LinearLayout>
    </RelativeLayout>
</layout>